--- a/notebooks/MonteCarlosimulationFinal.ipynb
+++ b/notebooks/MonteCarlosimulationFinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "139cb328",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "70deed3a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "745188fa",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,40 @@
     "#Simulation eines Patienten vorerst wird eine Vorbelastung geschaffen und dann fangen die echten Patienten an\n",
     "\n",
     "def patient_process(env, hospital, mean_los, rng, wait_times, is_preloaded=False):\n",
-    "    \"\"\"Simuliert den Weg eines Patienten (DES gemäß Kap. 4).\"\"\"\n",
+    "    \"\"\"\n",
+    "    Simuliert den diskreten Ereignisablauf eines Patienten (Entity) im System.\n",
+    "\n",
+    "    Input-Kriterien & Parameter:\n",
+    "    ---------------------------\n",
+    "    env : simpy.Environment\n",
+    "        Die zentrale Instanz der Simulation, die die virtuelle Zeit (env.now) verwaltet.\n",
+    "    hospital : simpy.Resource\n",
+    "        Die begrenzte Ressource 'Bett'. Repräsentiert die Systemkapazität (TOTAL_BEDS).\n",
+    "        Ein Patient muss diese anfordern (request), bevor die Behandlung beginnt.\n",
+    "    mean_los : float\n",
+    "        Der Input für die mittlere Verweildauer (Mean Length of Stay). \n",
+    "        Dient als Skalenparameter für die Exponentialverteilung.\n",
+    "    rng : numpy.random.Generator\n",
+    "        Der lokalisierte Zufallsgenerator. Verarbeitet den Seed der jeweiligen \n",
+    "        Replikation, um die Varianz in der Aufenthaltsdauer zu erzeugen.\n",
+    "    wait_times : list\n",
+    "        Der Zielspeicher (Output-Container). Hier wird die Differenz zwischen \n",
+    "        Ankunft und Aufnahme (t_aufnahme - t_ankunft) für die spätere \n",
+    "        statistische Auswertung abgelegt.\n",
+    "    is_preloaded : bool, optional (Default: False)\n",
+    "        Steuerungs-Input zur Vermeidung von Bias. Patienten, die bereits bei t=0\n",
+    "        im System sind (Vorbelastung), haben per Definition nicht gewartet.\n",
+    "        Falls True, erfolgt kein Eintrag in 'wait_times'.\n",
+    "\n",
+    "    Prozess-Logik:\n",
+    "    --------------\n",
+    "    1. Registrierung der Ankunftszeit (Timestamping).\n",
+    "    2. Warteschlange: Der Prozess pausiert (yield), bis ein Bett frei wird.\n",
+    "    3. Belegung: Berechnung der Wartezeit und Start der Behandlung.\n",
+    "    4. Service-Zeit: Generierung einer Zufallszahl (Exponentialverteilung):\n",
+    "       f(x; 1/mu) = (1/mu) * e^(-(1/mu)x).\n",
+    "    5. Freigabe: Das Bett wird nach Ablauf der Zeit automatisch wieder freigegeben.\n",
+    "    \"\"\"\n",
     "    t_ankunft = env.now\n",
     "    with hospital.request() as req:\n",
     "        yield req\n",
@@ -56,13 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f779cff4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def setup_hospital(env, hospital, rng, wait_times, patients_per_week):\n",
-    "    \"\"\"Initialisierung mit Vorbelastung (Warm-up) und Ankunftsprozess.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Steuert die Lastgenerierung basierend auf den Ankunftsraten.\n",
+    "\n",
+    "    Input-Kriterien:\n",
+    "    - env: SimPy Environment (Zentraler Zeitgeber).\n",
+    "    - hospital: Resource-Objekt mit definierter Kapazität 'TOTAL_BEDS'.\n",
+    "    - rng: Ein numpy Random Generator. Nutzt den BASE_SEED, um \n",
+    "           stochastische Varianz zwischen Replikationen zu ermöglichen.\n",
+    "    - wait_times: Referenz auf eine Liste (Mutable), die als Datenspeicher \n",
+    "                  für die Zielgröße 'Wartezeit' fungiert.\n",
+    "\n",
+    "    Logik der Input-Verarbeitung:\n",
+    "    Die Funktion transformiert die Rate (Patients/Week) in einen \n",
+    "    Interarrival-Zeitraum (1/lambda) für einen Poisson-Prozess.\n",
+    "    \"\"\"\n",
     "    mean_interarrival = 7.0 / patients_per_week\n",
     "    \n",
     "    # Vorbelastung (Steady-State): 75% der Betten zum Start belegen\n",
@@ -78,18 +125,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "16e518a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_simulation(patients_per_week):\n",
-    "    \"\"\"Führt R unabhängige Pfade aus (Monte Carlo).\"\"\"\n",
+    "    \"\"\"\n",
+    "    Kapselt ein einzelnes Szenario der Monte-Carlo-Simulation.\n",
+    "\n",
+    "    Input-Kriterien:\n",
+    "    - num_beds: Unabhängige Variable (Entscheidungsvariable). Hier wird \n",
+    "                getestet, ob 447 Betten für das Patientenaufkommen ausreichen.\n",
+    "    - seed: Deterministischer Input für stochastische Prozesse. Gewährleistet, \n",
+    "            dass Experimente reproduzierbar sind (Variance Reduction Technique).\n",
+    "\n",
+    "    Output-Kriterien:\n",
+    "    - Liefert Schätzwerte für Erwartungswert (Mean) und Risiko (95%-Quantil).\n",
+    "    \"\"\"\n",
     "    rep_means = []\n",
     "    rep_q95s = []\n",
     "    \n",
     "    for i in range(R):\n",
-    "        # Saubere RNG-Nutzung (Bewertungskriterium)\n",
+    "        # Saubere RNG-Nutzung \n",
     "        rng = np.random.default_rng(BASE_SEED + i)\n",
     "        env = simpy.Environment()\n",
     "        hospital = simpy.Resource(env, capacity=TOTAL_BEDS)\n",
@@ -111,7 +169,7 @@
     "    return m_final, se_final, ci, q95_final\n",
     "\n",
     "# --- 2. Durchführung Szenarien-Vergleich ---\n",
-    "# 35/Woche = Normal, 235/Woche = Systemlimit (Weg A)\n",
+    "# 35/Woche = Normal, 235/Woche = Systemlimit \n",
     "szenarien = [35, 235]\n",
     "results = []\n",
     "\n",
@@ -133,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "1bafac4a",
    "metadata": {},
    "outputs": [
@@ -171,7 +229,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.14"
   }
  },
