--- a/notebooks/MonteCarlosimulationFinal.ipynb
+++ b/notebooks/MonteCarlosimulationFinal.ipynb
@@ -132,16 +132,40 @@
    "source": [
     "def run_simulation(patients_per_week):\n",
     "    \"\"\"\n",
-    "    Kapselt ein einzelnes Szenario der Monte-Carlo-Simulation.\n",
+    "    Führt eine einzelne, unabhängige Replikation des Simulationsmodells aus.\n",
     "\n",
-    "    Input-Kriterien:\n",
-    "    - num_beds: Unabhängige Variable (Entscheidungsvariable). Hier wird \n",
-    "                getestet, ob 447 Betten für das Patientenaufkommen ausreichen.\n",
-    "    - seed: Deterministischer Input für stochastische Prozesse. Gewährleistet, \n",
-    "            dass Experimente reproduzierbar sind (Variance Reduction Technique).\n",
+    "    Dieser Docstring beschreibt die Kapselung eines Szenarios, um eine \n",
+    "    statistisch belastbare Stichprobe für die Monte-Carlo-Analyse zu generieren.\n",
     "\n",
-    "    Output-Kriterien:\n",
-    "    - Liefert Schätzwerte für Erwartungswert (Mean) und Risiko (95%-Quantil).\n",
+    "    Input-Kriterien & Szenario-Parameter:\n",
+    "    ------------------------------------\n",
+    "    num_beds : int\n",
+    "        Die Kapazitätsvariable (Entscheidungsvariable). Definiert das Szenario \n",
+    "        hinsichtlich der Ressourcenverfügbarkeit. Änderungen an diesem Wert \n",
+    "        erlauben \"What-if\"-Analysen (z. B. Auswirkung von Bettenabbau).\n",
+    "        \n",
+    "    seed : int\n",
+    "        Der deterministische Input für den Zufallsgenerator. \n",
+    "        Wichtig: Jede Replikation eines Szenarios muss einen eindeutigen Seed \n",
+    "        erhalten, um Korrelationen zwischen den Läufen zu vermeiden und \n",
+    "        den Standardfehler (SE) korrekt berechnen zu können.\n",
+    "\n",
+    "    Szenario-Logik & Ablauf:\n",
+    "    -----------------------\n",
+    "    1. Instanziierung: Erstellung einer isolierten simpy.Environment.\n",
+    "    2. Konfiguration: Festlegung der Kapazität basierend auf num_beds.\n",
+    "    3. Stochastik: Initialisierung des RNG (Random Number Generator) mit dem Seed,\n",
+    "       um die Reproduzierbarkeit des Szenarios zu gewährleisten.\n",
+    "    4. Simulation: Ausführung bis zum Erreichen von SIM_DURATION.\n",
+    "    5. Datengewinnung: Extraktion der Performance-Indikatoren (KPIs) für \n",
+    "       genau diesen Pfad.\n",
+    "\n",
+    "    Output-Kriterien (Szenario-Ergebnis):\n",
+    "    ------------------------------------\n",
+    "    return : tuple (float, float)\n",
+    "        Gibt die aggregierten Metriken der Replikation zurück:\n",
+    "        - Arithmetisches Mittel der Wartezeiten (Punkt-Schätzer).\n",
+    "        - 95%-Quantil der Wartezeiten (Risiko-Maß/Service-Level).\n",
     "    \"\"\"\n",
     "    rep_means = []\n",
     "    rep_q95s = []\n",
