--- a/tests/infunferschrittern.ipynb
+++ b/tests/infunferschrittern.ipynb
@@ -3,95 +3,181 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231b80ec",
+   "id": "60da8350",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Hier werden die Szenearien in fünfer Schritten durchgegangen um besser zu sehen ab wann das system kippt\n",
-    "\n",
     "import simpy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "\"\"\"\n",
+    "TITEL: Krankenhaussimulation zur Identifikation von Kapazitätsgrenzen (Stress-Test)\n",
+    "\n",
+    "BESCHREIBUNG:\n",
+    "Dieses Skript führt eine diskrete Ereignissimulation (DES) durch, um die Belastbarkeit \n",
+    "einer Krankenhausabteilung zu testen. Es kombiniert SimPy (Prozesslogik) mit \n",
+    "Monte-Carlo-Methoden (statistische Absicherung).\n",
+    "\n",
+    "ZIEL:\n",
+    "Herauszufinden, ab welcher Patientenanzahl pro Woche das System \"kippt\" (von stabil zu überlastet).\n",
+    "Dazu wird die Patientenlast schrittweise erhöht (Szenario-Analyse).\n",
+    "\"\"\"\n",
+    "\n",
     "# =========================================================\n",
     "# 1. KONFIGURATION\n",
     "# =========================================================\n",
-    "TOTAL_BEDS = 447\n",
-    "BASE_SEED = 42\n",
-    "R = 20                      # Monte-Carlo-Replikationen\n",
-    "SIM_DURATION = 150          # Simulationsdauer (Tage)\n",
-    "WARMUP_OCCUPANCY = 0.75     # 75 % Vorbelegung\n",
-    "MEAN_LOS = 14               # mittlere Aufenthaltsdauer (Tage)\n",
+    "TOTAL_BEDS = 447            # Maximale Bettenkapazität (Ressource)\n",
+    "BASE_SEED = 42              # Startwert für den Zufallszahlengenerator (für Reproduzierbarkeit)\n",
+    "R = 20                      # Anzahl der Monte-Carlo-Läufe pro Szenario (zur Glättung von Zufallsschwankungen)\n",
+    "SIM_DURATION = 150          # Dauer einer einzelnen Simulation in Tagen\n",
+    "WARMUP_OCCUPANCY = 0.75     # Initiale Auslastung (75%), um \"leeres System\"-Bias zu vermeiden\n",
+    "MEAN_LOS = 14               # Mittlere Verweildauer (Length of Stay) in Tagen (Exponentialverteilt)\n",
     "\n",
     "# =========================================================\n",
     "# 2. PATIENTENPROZESS (DES)\n",
     "# =========================================================\n",
     "def patient_process(env, hospital, mean_los, rng, stats, is_preloaded=False):\n",
+    "    \"\"\"\n",
+    "    Simuliert den Lebenszyklus eines einzelnen Patienten im Krankenhaus.\n",
+    "    \n",
+    "    Ablauf:\n",
+    "    1. Ankunft (Request eines Bettes).\n",
+    "    2. Warten (falls alle Betten belegt sind).\n",
+    "    3. Belegung (Start Service).\n",
+    "    4. Aufenthalt (Timeout für Dauer LOS).\n",
+    "    5. Entlassung (Release des Bettes).\n",
+    "\n",
+    "    Args:\n",
+    "        env: SimPy Environment.\n",
+    "        hospital: SimPy Resource (Betten).\n",
+    "        mean_los: Durchschnittliche Aufenthaltsdauer.\n",
+    "        rng: Numpy Random Generator Instanz.\n",
+    "        stats: Dictionary zum Sammeln von Metriken.\n",
+    "        is_preloaded (bool): Wenn True, zählt der Patient nicht zur Wartezeit-Statistik \n",
+    "                             (da er Teil des Warm-ups ist).\n",
+    "    \"\"\"\n",
     "    arrival_time = env.now\n",
     "\n",
+    "    # Anfrage an die Ressource 'Krankenhausbett'\n",
     "    with hospital.request() as req:\n",
-    "        yield req\n",
+    "        yield req  # Warten, bis ein Bett frei wird\n",
+    "        \n",
     "        start_service = env.now\n",
     "\n",
-    "        # Statistik nur für reguläre Patienten\n",
+    "        # Nur \"echte\" neue Patienten zählen für die Wartezeit-Analyse.\n",
+    "        # Preload-Patienten sind schon \"im Bett\", wenn die Sim startet.\n",
     "        if not is_preloaded:\n",
     "            stats[\"wait_times\"].append(start_service - arrival_time)\n",
     "\n",
-    "        # Aufenthaltsdauer\n",
+    "        # Patient belegt das Bett für eine zufällige Zeit (Exponentialverteilung)\n",
     "        yield env.timeout(rng.exponential(mean_los))\n",
     "\n",
     "# =========================================================\n",
     "# 3. KRANKENHAUS-SETUP (INKL. WARM-UP)\n",
     "# =========================================================\n",
     "def setup_hospital(env, hospital, rng, stats, patients_per_week, mean_los):\n",
+    "    \"\"\"\n",
+    "    Initialisiert das Krankenhaus und steuert den Patientenstrom.\n",
+    "    \n",
+    "    Funktionen:\n",
+    "    1. Warm-up: Füllt das Krankenhaus sofort zu Beginn zu X% (hier 75%), \n",
+    "       damit die Simulation nicht bei 0 Bettenbelegung startet (realistischerer Startzustand).\n",
+    "    2. Generator: Erzeugt kontinuierlich neue Patienten basierend auf der Wochenrate.\n",
+    "\n",
+    "    Args:\n",
+    "        env (simpy.Environment): Die aktive Simulationsumgebung.\n",
+    "        hospital (simpy.Resource): Die Bettenressource.\n",
+    "        rng (numpy.random.Generator): Zufallszahlengenerator.\n",
+    "        stats (dict): Sammelbehälter für Simulationsdaten.\n",
+    "        patients_per_week (int): Die Last-Variable für das aktuelle Szenario.\n",
+    "        mean_los (float): Durchschnittliche Aufenthaltsdauer.\n",
+    "    \"\"\"\n",
+    "    # Umrechnung: Patienten pro Woche -> Durchschnittlicher Zeitabstand zwischen Ankünften (in Tagen)\n",
     "    mean_interarrival = 7.0 / patients_per_week\n",
     "\n",
-    "    # Warm-up: Anfangsbelegung\n",
+    "    # 1. WARM-UP PHASE (System vorbefüllen)\n",
     "    preload = int(TOTAL_BEDS * WARMUP_OCCUPANCY)\n",
     "    for _ in range(preload):\n",
     "        env.process(patient_process(\n",
     "            env, hospital, mean_los, rng, stats, is_preloaded=True\n",
     "        ))\n",
     "\n",
-    "    # Laufender Ankunftsprozess\n",
+    "    # 2. LAUFENDER BETRIEB (Generator-Schleife)\n",
     "    while True:\n",
+    "        # Warten bis zum nächsten Patienten (zufällig, exponentialverteilt)\n",
     "        yield env.timeout(rng.exponential(mean_interarrival))\n",
+    "        # Neuen Patientenprozess starten\n",
     "        env.process(patient_process(\n",
     "            env, hospital, mean_los, rng, stats\n",
     "        ))\n",
     "\n",
     "# =========================================================\n",
-    "# 4. ENGPass-MONITOR (ZIELEREIGNIS Yi)\n",
+    "# 4. ENGPASS-MONITOR (ZIELEREIGNIS Yi)\n",
     "# =========================================================\n",
     "def monitor_system(env, hospital, stats):\n",
     "    \"\"\"\n",
-    "    Engpass liegt vor, wenn:\n",
-    "    - Warteschlange > 0 ODER\n",
-    "    - Belegung == Kapazität\n",
+    "    Beobachter-Prozess, der parallel läuft und den Systemzustand prüft.\n",
+    "    \n",
+    "    Zweck:\n",
+    "    Erfassung von \"Soft-Metriken\", die SimPy nicht automatisch speichert.\n",
+    "    Hier definiert: Was ist ein \"Engpass\"?\n",
+    "    \n",
+    "    Definition Engpass:\n",
+    "    - Es existiert eine Warteschlange (queue > 0)\n",
+    "      ODER\n",
+    "    - Alle Betten sind voll (count == capacity)\n",
+    "    \n",
+    "    Die Prüfung erfolgt alle 0.1 Tage (diskretisiert), um die Dauer des Engpasses\n",
+    "    (Time in Congestion) aufzusummieren.\n",
+    "\n",
+    "    Args:\n",
+    "        env (simpy.Environment): Die aktive Simulationsumgebung.\n",
+    "        hospital (simpy.Resource): Die zu überwachende Ressource.\n",
+    "        stats (dict): Dictionary, in dem 'engpass_time' und 'engpass_flag' aktualisiert werden.\n",
     "    \"\"\"\n",
     "    last_time = env.now\n",
     "\n",
     "    while True:\n",
-    "        yield env.timeout(0.1)  # feine Zeitauflösung\n",
+    "        yield env.timeout(0.1)  # Prüf-Intervall (hohe Auflösung)\n",
     "        now = env.now\n",
-    "        dt = now - last_time\n",
+    "        dt = now - last_time    # Vergangene Zeit seit letztem Check\n",
     "        last_time = now\n",
     "\n",
     "        queue_len = len(hospital.queue)\n",
     "        occupancy = hospital.count\n",
     "\n",
+    "        # Prüfung auf Engpass-Kriterium\n",
     "        if queue_len > 0 or occupancy >= TOTAL_BEDS:\n",
-    "            stats[\"engpass_time\"] += dt\n",
-    "            stats[\"engpass_flag\"] = 1  # Yi = 1\n",
+    "            stats[\"engpass_time\"] += dt  # Zeit im roten Bereich aufaddieren\n",
+    "            stats[\"engpass_flag\"] = 1    # Markierung: In diesem Lauf gab es mind. einen Engpass\n",
     "\n",
     "# =========================================================\n",
-    "# 5. EIN SIMULATIONSLauf\n",
+    "# 5. EIN SIMULATIONSLAUF\n",
     "# =========================================================\n",
     "def run_single_simulation(patients_per_week, mean_los, seed):\n",
+    "    \"\"\"\n",
+    "    Kapselt einen kompletten Simulationsdurchlauf (Replikation).\n",
+    "    \n",
+    "    Ablauf:\n",
+    "    1. Erstellt Environment und Ressource.\n",
+    "    2. Startet Setup (Patientengenerator) und Monitor.\n",
+    "    3. Führt Simulation bis SIM_DURATION aus.\n",
+    "    4. Gibt Rohdaten (stats) zurück.\n",
+    "\n",
+    "    Args:\n",
+    "        patients_per_week (int): Anzahl Patientenankünfte pro Woche.\n",
+    "        mean_los (float): Mittlere Verweildauer in Tagen.\n",
+    "        seed (int): Startwert für den Zufall (wichtig für Reproduzierbarkeit).\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Die gesammelten Statistiken (wait_times, engpass_time, engpass_flag).\n",
+    "    \"\"\"\n",
     "    rng = np.random.default_rng(seed)\n",
     "    env = simpy.Environment()\n",
     "    hospital = simpy.Resource(env, capacity=TOTAL_BEDS)\n",
     "\n",
+    "    # Container für Ergebnisse dieses einen Laufs\n",
     "    stats = {\n",
     "        \"wait_times\": [],\n",
     "        \"engpass_time\": 0.0,\n",
@@ -110,11 +196,32 @@
     "# 6. MONTE-CARLO-SCHLEIFE\n",
     "# =========================================================\n",
     "def monte_carlo(patients_per_week, mean_los):\n",
+    "    \"\"\"\n",
+    "    Führt R Replikationen für EIN bestimmtes Last-Szenario durch.\n",
+    "    \n",
+    "    Zweck:\n",
+    "    Da Simulationen stochastisch sind (Zufall), reicht ein Lauf nicht aus.\n",
+    "    Wir mitteln über R Läufe, um statistisch signifikante Aussagen zu treffen.\n",
+    "    \n",
+    "    Rückgabe:\n",
+    "    - Mittelwert & Konfidenzintervall der Wartezeit.\n",
+    "    - Engpass-Wahrscheinlichkeit (Wie viel % der R Läufe hatten Probleme?).\n",
+    "    - Durchschnittliche Zeit im Engpass.\n",
+    "\n",
+    "    Args:\n",
+    "        patients_per_week (int): Die zu testende Last im aktuellen Szenario.\n",
+    "        mean_los (float): Mittlere Verweildauer.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: Enthält (Mittelwert Wartezeit, Standardfehler, 95%-KI, \n",
+    "                Wahrscheinlichkeit für Engpass, mittlere Dauer im Engpass).\n",
+    "    \"\"\"\n",
     "    wait_means = []\n",
     "    engpass_flags = []\n",
     "    engpass_times = []\n",
     "\n",
     "    for i in range(R):\n",
+    "        # Jeder Lauf bekommt einen eigenen Seed (BASE_SEED + i), damit sie unterschiedlich sind\n",
     "        stats = run_single_simulation(\n",
     "            patients_per_week, mean_los, BASE_SEED + i\n",
     "        )\n",
@@ -123,13 +230,17 @@
     "            wait_means.append(np.mean(stats[\"wait_times\"]))\n",
     "\n",
     "        engpass_flags.append(stats[\"engpass_flag\"])\n",
-    "        engpass_times.append(stats[\"engpass_time\"] / SIM_DURATION)\n",
+    "        engpass_times.append(stats[\"engpass_time\"] / SIM_DURATION) # Normierung auf % der Zeit\n",
     "\n",
-    "    mean_wait = np.mean(wait_means)\n",
-    "    se_wait = np.std(wait_means, ddof=1) / np.sqrt(R)\n",
-    "    ci_wait = (mean_wait - 1.96 * se_wait, mean_wait + 1.96 * se_wait)\n",
+    "    # Berechnung der Statistik über alle R Läufe\n",
+    "    if wait_means:\n",
+    "        mean_wait = np.mean(wait_means)\n",
+    "        se_wait = np.std(wait_means, ddof=1) / np.sqrt(R) # Standardfehler\n",
+    "        ci_wait = (mean_wait - 1.96 * se_wait, mean_wait + 1.96 * se_wait) # 95% KI\n",
+    "    else:\n",
+    "        mean_wait, se_wait, ci_wait = 0, 0, (0, 0)\n",
     "\n",
-    "    p_engpass = np.mean(engpass_flags)\n",
+    "    p_engpass = np.mean(engpass_flags)       # z.B. 0.4 bedeutet: in 40% der Läufe gab es Stau\n",
     "    mean_engpass_time = np.mean(engpass_times)\n",
     "\n",
     "    return mean_wait, se_wait, ci_wait, p_engpass, mean_engpass_time\n",
@@ -137,11 +248,26 @@
     "# =========================================================\n",
     "# 7. LASTSTEIGERUNGS-SZENARIO (5er-Schritte)\n",
     "# =========================================================\n",
-    "patients_range = range(35, 236, 5)  # 35 → 235 in 5er-Schritten\n",
+    "\"\"\"\n",
+    "Hier findet der eigentliche \"Stress-Test\" statt.\n",
+    "Wir iterieren von einer niedrigen Last (35 Pat/Woche) bis zu einer \n",
+    "sehr hohen Last (235 Pat/Woche) in 5er Schritten.\n",
+    "\n",
+    "Dies ermöglicht die Erstellung einer Kennlinie:\n",
+    "X-Achse: Patientenaufkommen\n",
+    "Y-Achse: Wahrscheinlichkeit eines Engpasses\n",
+    "\n",
+    "So lässt sich der \"Kipppunkt\" (Tipping Point) visuell oder rechnerisch finden.\n",
+    "\"\"\"\n",
+    "patients_range = range(35, 236, 5)  # Start=35, Ende<236, Schrittweite=5\n",
     "results = []\n",
     "\n",
     "for p_week in patients_range:\n",
+    "    # Monte Carlo Analyse für diesen spezifischen Last-Punkt\n",
     "    m, se, ci, p_e, t_e = monte_carlo(p_week, MEAN_LOS)\n",
+    "    \n",
+    "    # Theoretische Auslastung (Rho) nach Formel: (Lambda * Mu) / Kapazität\n",
+    "    # Dient als Referenzwert zur Simulation.\n",
     "    rho = ((p_week / 7) * MEAN_LOS) / TOTAL_BEDS\n",
     "\n",
     "    results.append({\n",
@@ -150,8 +276,8 @@
     "        \"Ø Wartezeit (d)\": m,\n",
     "        \"SE\": se,\n",
     "        \"95%-KI\": f\"[{ci[0]:.2f}, {ci[1]:.2f}]\",\n",
-    "        \"P(Engpass)\": p_e,\n",
-    "        \"Zeit im Engpass (%)\": t_e * 100\n",
+    "        \"P(Engpass)\": p_e,              # Kritische Metrik 1: Risiko\n",
+    "        \"Zeit im Engpass (%)\": t_e * 100 # Kritische Metrik 2: Schweregrad\n",
     "    })\n",
     "\n",
     "# =========================================================\n",
@@ -159,14 +285,16 @@
     "# =========================================================\n",
     "df = pd.DataFrame(results)\n",
     "\n",
+    "# Kategorisierung für schnelle Lesbarkeit\n",
     "df[\"Belastungsstatus\"] = df[\"P(Engpass)\"].apply(\n",
-    "    lambda x: \"OK\" if x < 0.1 else\n",
-    "              \"kritisch\" if x < 0.5 else\n",
-    "              \"Überlastet\"\n",
+    "    lambda x: \"OK\" if x < 0.1 else             # < 10% Risiko\n",
+    "              \"kritisch\" if x < 0.5 else       # 10-50% Risiko\n",
+    "              \"Überlastet\"                     # > 50% Risiko\n",
     ")\n",
     "\n",
     "print(\"\\nLASTSTEIGERUNGS-ANALYSE (DES + MONTE CARLO)\")\n",
     "print(\"=\" * 120)\n",
+    "# Formatierte Ausgabe der Tabelle\n",
     "print(df.to_string(index=False, formatters={\n",
     "    \"Auslastung ρ\": lambda x: f\"{x*100:.1f}%\",\n",
     "    \"Ø Wartezeit (d)\": lambda x: f\"{x:.3f}\",\n",
@@ -176,7 +304,8 @@
     "}))\n",
     "print(\"=\" * 120)\n",
     "\n",
-    "# Automatische Belastungsschwelle\n",
+    "# Automatische Identifikation des Kipppunkts\n",
+    "# Wir definieren den Kipppunkt hier als den Moment, wo das Engpass-Risiko 50% überschreitet.\n",
     "critical = df[df[\"P(Engpass)\"] >= 0.5]\n",
     "\n",
     "if not critical.empty:\n",
@@ -192,7 +321,7 @@
     "print(\n",
     "    f\"\\nParameter: Betten={TOTAL_BEDS}, LOS={MEAN_LOS} Tage, \"\n",
     "    f\"R={R}, Dauer={SIM_DURATION} Tage\"\n",
-    ")\n"
+    ")"
    ]
   }
  ],
