--- a/tests/infunferschrittern.ipynb
+++ b/tests/infunferschrittern.ipynb
@@ -212,9 +212,10 @@
     "        patients_per_week (int): Die zu testende Last im aktuellen Szenario.\n",
     "        mean_los (float): Mittlere Verweildauer.\n",
     "\n",
-    "    Returns:\n",
-    "        tuple: Enthält (Mittelwert Wartezeit, Standardfehler, 95%-KI, \n",
-    "                Wahrscheinlichkeit für Engpass, mittlere Dauer im Engpass).\n",
+    "    Rückgabe als tuple was enthält:\n",
+    "    - Mittelwert & Konfidenzintervall der Wartezeit.\n",
+    "    - Engpass-Wahrscheinlichkeit (Wie viel % der R Läufe hatten Probleme?).\n",
+    "    - Durchschnittliche Zeit im Engpass.\n",
     "    \"\"\"\n",
     "    wait_means = []\n",
     "    engpass_flags = []\n",
