--- a/notebooks/MonteCarlosimulationFinal.ipynb
+++ b/notebooks/MonteCarlosimulationFinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "139cb328",
    "metadata": {},
    "outputs": [],
@@ -14,15 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "70deed3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Parameter definieren \n",
-    "ICU_BEDS = 47            #verfügbare Intensivbetten Für Corona Patienten in Nürnberg\n",
-    "NORM_BEDS = 400          #verfügbare Betten auf Normalstationen in Nürnberg\n",
-    "TOTAL_BEDS = ICU_BEDS + NORM_BEDS #Komplete Bettkapazität für Corona Patienten\n",
+    "#Parameter definieren\n",
+    "Klinikum_sud =  961                                 #Alle Betten in Klinikum Süd Nürnberg\n",
+    "Klinikum_nord = 1272                                #Alle Betten in Klinikum Nord Nürnberg\n",
+    "Actual_Beds = Klinikum_sud + Klinikum_nord\n",
+    "\n",
+    "ActualICU_BEDS = 158                               #die ingesamte Anzahl an Intensivbetten im Klinikum Nürnberg\n",
+    "ActualNORM_BEDS = Actual_Beds - ActualICU_BEDS     #die insgesamte Anzahl an Normalstationsbetten im Klinikum Nürnberg\n",
+    "\n",
+    "\n",
+    "ICU_BEDS = int(ActualICU_BEDS * 30 / 100)          #30 Prozent der verfügbare Intensivbetten Für Corona Patienten in Nürnberg\n",
+    "NORM_BEDS = int(ActualNORM_BEDS * 25 / 100)          #25 Prozent der verfügbare Betten für Corona Patienten auf Normalstationen in Nürnberg\n",
+    "TOTAL_BEDS = ICU_BEDS + NORM_BEDS               #Komplete Bettkapazität für Corona Patienten\n",
     "\n",
     "\n",
     "MEAN_LOS = 14.0          # Mittelwert der Liegedauer in Tagen\n",
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "745188fa",
    "metadata": {},
    "outputs": [],
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f779cff4",
    "metadata": {},
    "outputs": [],
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "16e518a0",
    "metadata": {},
    "outputs": [],
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "1bafac4a",
    "metadata": {},
    "outputs": [
@@ -227,10 +235,10 @@
       "ERGEBNISSE DER KRANKENHAUS-SIMULATION (Weg A: Lastvariation)\n",
       "===============================================================================================\n",
       "   Szenario  Pat./Woche Auslastung (ρ) Mean Wartezeit Std.-Fehler (SE) 95%-Konf.-Intervall Ø 95%-Quantil\n",
-      "     Normal          35          15.7%       0.0000 d           0.0000      [0.000, 0.000]      0.0000 d\n",
-      "Stress-Test         235         105.1%       2.7425 d           0.2882      [2.178, 3.307]      6.4597 d\n",
+      "     Normal          35          12.4%       0.0000 d           0.0000      [0.000, 0.000]      0.0000 d\n",
+      "Stress-Test         235          83.2%       0.0000 d           0.0000      [0.000, 0.000]      0.0000 d\n",
       "-----------------------------------------------------------------------------------------------\n",
-      "Bedingungen: Betten = 447, Replikationen R = 20, Dauer = 150 Tage.\n"
+      "Bedingungen: Betten = 565, Replikationen R = 20, Dauer = 150 Tage.\n"
      ]
     }
    ],
