--- a/tests/infunferschrittern.ipynb
+++ b/tests/infunferschrittern.ipynb
@@ -5,7 +5,64 @@
    "execution_count": null,
    "id": "60da8350",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "LASTSTEIGERUNGS-ANALYSE (DES + MONTE CARLO)\n",
+      "========================================================================================================================\n",
+      " Pat./Woche Auslastung ρ Ø Wartezeit (d)    SE       95%-KI P(Engpass) Zeit im Engpass (%) Belastungsstatus\n",
+      "         35        12.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         40        14.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         45        15.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         50        17.7%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         55        19.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         60        21.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         65        23.0%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         70        24.8%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         75        26.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         80        28.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         85        30.1%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         90        31.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "         95        33.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        100        35.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        105        37.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        110        38.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        115        40.7%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        120        42.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        125        44.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        130        46.0%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        135        47.8%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        140        49.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        145        51.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        150        53.1%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        155        54.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        160        56.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        165        58.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        170        60.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        175        61.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        180        63.7%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        185        65.5%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        190        67.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        195        69.0%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        200        70.8%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        205        72.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        210        74.3%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        215        76.1%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        220        77.9%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        225        79.6%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        230        81.4%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "        235        83.2%           0.000 0.000 [0.00, 0.00]       0.00                 0.0               OK\n",
+      "========================================================================================================================\n",
+      "\n",
+      "✅ Keine kritische Belastung im untersuchten Bereich.\n",
+      "\n",
+      "Parameter: Betten=565, LOS=14 Tage, R=20, Dauer=150 Tage\n"
+     ]
+    }
+   ],
    "source": [
     "import simpy\n",
     "import numpy as np\n",
@@ -27,7 +84,18 @@
     "# =========================================================\n",
     "# 1. KONFIGURATION\n",
     "# =========================================================\n",
-    "TOTAL_BEDS = 447            # Maximale Bettenkapazität (Ressource)\n",
+    "Klinikum_sud =  961                                 #Alle Betten in Klinikum Süd Nürnberg\n",
+    "Klinikum_nord = 1272                                #Alle Betten in Klinikum Nord Nürnberg\n",
+    "Actual_Beds = Klinikum_sud + Klinikum_nord\n",
+    "\n",
+    "ActualICU_BEDS = 158                               #die ingesamte Anzahl an Intensivbetten im Klinikum Nürnberg\n",
+    "ActualNORM_BEDS = Actual_Beds - ActualICU_BEDS     #die insgesamte Anzahl an Normalstationsbetten im Klinikum Nürnberg\n",
+    "\n",
+    "\n",
+    "ICU_BEDS = int(ActualICU_BEDS * 30 / 100)          #30 Prozent der verfügbare Intensivbetten Für Corona Patienten in Nürnberg\n",
+    "NORM_BEDS = int(ActualNORM_BEDS * 25 / 100)          #25 Prozent der verfügbare Betten für Corona Patienten auf Normalstationen in Nürnberg\n",
+    "TOTAL_BEDS = ICU_BEDS + NORM_BEDS               #Komplete Bettkapazität für Corona Patienten\n",
+    "\n",
     "BASE_SEED = 42              # Startwert für den Zufallszahlengenerator (für Reproduzierbarkeit)\n",
     "R = 20                      # Anzahl der Monte-Carlo-Läufe pro Szenario (zur Glättung von Zufallsschwankungen)\n",
     "SIM_DURATION = 150          # Dauer einer einzelnen Simulation in Tagen\n",
@@ -312,12 +380,12 @@
     "if not critical.empty:\n",
     "    first = critical.iloc[0]\n",
     "    print(\n",
-    "        f\"\\n⚠️ Belastungsschwelle ab ca. \"\n",
+    "        f\"\\n Belastungsschwelle ab ca. \"\n",
     "        f\"{first['Pat./Woche']} Patienten/Woche \"\n",
     "        f\"(P(Engpass) ≥ 50%)\"\n",
     "    )\n",
     "else:\n",
-    "    print(\"\\n✅ Keine kritische Belastung im untersuchten Bereich.\")\n",
+    "    print(\"\\n Keine kritische Belastung im untersuchten Bereich.\")\n",
     "\n",
     "print(\n",
     "    f\"\\nParameter: Betten={TOTAL_BEDS}, LOS={MEAN_LOS} Tage, \"\n",
@@ -333,7 +401,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.14"
   }
  },
