--- a/tests/infunferschrittern.ipynb
+++ b/tests/infunferschrittern.ipynb
@@ -69,16 +69,7 @@
     "import pandas as pd\n",
     "\n",
     "\"\"\"\n",
-    "TITEL: Krankenhaussimulation zur Identifikation von Kapazitätsgrenzen (Stress-Test)\n",
-    "\n",
-    "BESCHREIBUNG:\n",
-    "Dieses Skript führt eine diskrete Ereignissimulation (DES) durch, um die Belastbarkeit \n",
-    "einer Krankenhausabteilung zu testen. Es kombiniert SimPy (Prozesslogik) mit \n",
-    "Monte-Carlo-Methoden (statistische Absicherung).\n",
-    "\n",
-    "ZIEL:\n",
-    "Herauszufinden, ab welcher Patientenanzahl pro Woche das System \"kippt\" (von stabil zu überlastet).\n",
-    "Dazu wird die Patientenlast schrittweise erhöht (Szenario-Analyse).\n",
+    "Erweiterung in 5-er Schritten um Kippunkt genauer zu erkennen \n",
     "\"\"\"\n",
     "\n",
     "# =========================================================\n",
